feat: HTML报告属性切分为单独行显示，添加outputAllElements选项支持